[project]
name = "rl-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "datasets==3.5.1",
    "flash-attn",
    "ipykernel>=7.2.0",
    "markupsafe==3.0.3",
    "nltk>=3.9.4",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
    "tensorboard>=2.20.0",
    "torch==2.8.0",
    "torchmetrics==1.9.0",
    "torchvision>=0.23.0",
    "transformers==4.57.6",
    "vllm>=0.11.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
flash-attn = { path = "../flash_attn-2.8.3+cu12torch2.8cxx11abiTRUE-cp310-cp310-linux_x86_64.whl" }
